[tool.poetry]
name = "access-stack-spike2"
version = "0.1.0"
description = ""
authors = ["Nathan Laundry <nathan.laundry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
pyright = "^1.1.336"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
pytest = "^7.4.3"
ruff = "^0.1.6"
prisma = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
